# fish-avatar

./: .env.example  README.md  render.yaml
fish/: .env.example  CLAUDE.md  Dockerfile  README.md  livekit.toml  pyproject.toml
fish/src/: agent.py  llm.py
web/: README.md  app-config.ts  package.json  pnpm-lock.yaml
web/components/agents-ui/: agent-chat-transcript.tsx  agent-session-provider.tsx
web/components/agents-ui/blocks/agent-session-view-01/components/: agent-session-block.tsx
web/components/app/: app.tsx  avatar-tile.tsx  captions.tsx  fish-tail-logo.tsx  view-controller.tsx  waveform-loader.tsx  welcome-view.tsx
web/public/: fish-tail-logo.riv
web/styles/: globals.css
