[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fish-avatar-agent"
version = "1.0.0"
description = "LiveKit Agents worker: Fish Audio TTS voice agent with a Beyond Presence avatar"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[bey,openai,silero,soniox]>=1.6.0",
    "livekit-plugins-fishaudio>=1.6.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
# yarl 1.24.1 was published with only a cp310 wheel and no sdist, so it can't
# install on Python 3.11+. Remove this once upstream uploads the remaining wheels.
constraint-dependencies = ["yarl<1.24"]

# Same SDK fork as livekit-demo (`cale/expressive-fish`): its fishaudio plugin keeps
# one prewarmed `/v1/tts/live` websocket per session (utils.ConnectionPool + a real
# prewarm() the framework calls at agent-activity start), so the first utterance
# skips the ~330ms handshake and later replies reuse the warm socket. The fork is at
# 1.6.2 while PyPI plugins are on 1.6.4 and require livekit-agents>=1.6.4 — installing
# any plugin from PyPI would bump the SDK off the fork — so EVERY livekit plugin we
# use is pinned to the same fork (they all live in its monorepo at 1.6.2).
# Track upstream progress at livekit/agents PR #6116 (tina/expressive-mode).
[tool.uv.sources]
livekit-agents = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-agents" }
livekit-plugins-fishaudio = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-plugins/livekit-plugins-fishaudio" }
livekit-plugins-bey = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-plugins/livekit-plugins-bey" }
livekit-plugins-openai = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-plugins/livekit-plugins-openai" }
livekit-plugins-silero = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-plugins/livekit-plugins-silero" }
livekit-plugins-soniox = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-plugins/livekit-plugins-soniox" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
